package Logica;

public class Subject {
    private int id;
    private String name;
    private String description;
    private String subject;

    public Subject() {
    }

    public Subject(int id, String name, String description, String subject) {
        this.id = id;
        this.name = name;
        this.description = description;
        this.subject = subject;
    }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }

    public String getSubject() {
        return subject;
    }

    public void setSubject(String subject) {
        this.subject = subject;
    }
    
    
}
